recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:4: error: not found: value lenght
else {avance( lenght)
              ^Spiral:6: error: not enough arguments for method spiral: (steps: Int, angle: Int, length: Int, increment: Int)Unit.
Unspecified value parameters steps, angle, length, ...
spiral()}
      ^